# fordgron

./: .gitignore  README.md  Untitled.ipynb  __init__.py  dalle_mega.py  dalle_mini.py  ddp_train.py  e.py  e_mega.py  finetune_j.py  generate.ipynb  generate.py  get_dataloader.py  gpt_j.py  infer.py  j.py  math_text_document_train_test_indexmap_7500ns_100sl_1s_doc_idx.npy  math_text_document_train_test_indexmap_7500ns_100sl_1s_sample_idx.npy  math_text_document_train_test_indexmap_7500ns_100sl_1s_shuffle_idx.npy  math_text_document_train_test_indexmap_7500ns_2048sl_124s_doc_idx.npy  math_text_document_train_test_indexmap_7500ns_2048sl_124s_sample_idx.npy  math_text_document_train_test_indexmap_7500ns_2048sl_124s_shuffle_idx.npy  multi_gpu.py  multi_gpu_generate.ipynb  pile_test_text_document_train_test_indexmap_7500ns_100sl_1s_doc_idx.npy  pile_test_text_document_train_test_indexmap_7500ns_100sl_1s_sample_idx.npy  pile_test_text_document_train_test_indexmap_7500ns_100sl_1s_shuffle_idx.npy  pyproject.toml  test.py  test_213.pt  tokenize_pile.py  transformers-j.py
data/: middlemarch.txt
fordgron/: __init__.py  dataloader.py  e.py  sample.py
fordgron/inference/: __init__.py  stream_token_ids.py
fordgron/model/: __init__.py  dall_e.py  dalle.py  gpt_j.py  transformer.py
fordgron/model/modules/: mlp.py  self_attention.py  transformer_block.py
fordgron/utils/: GPT2_Dataset.py  indexed_dataset.py
former/: modules.py
gpt-k/: jsonl_to_x.py
gpt_k/: __init__.py  dataloader.py  model.py
gpt_k/inference/: __init__.py  stream.py  stream_token_ids.py
gpt_k/model/: modules.py  transformer.py
gpt_k/model/modules/: __init__.py  feed_forward.py  mlp.py  positional_encoding.py  rotary_embedding.py  self_attention.py  transformer_block.py
gpt_k/utils/: helpers.cpp
k/: __init__.py  dataloader.py  jsonl_to_x.py
scripts/: generate.py
tests/: test_gpt_k.py
