[tool.poetry]
name = "gpt-k"
version = "0.1.0"
description = ""
authors = ["William Eliot <william@mystic.ai>", "Paul Hetherington <paul@getneuro.ai>"]
packages = [
  {include="gpt_k"}
]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.1"
black = "^21.12b0"
transformers = "^4.15.0"
torchtext = "^0.11.1"
pandas = "^1.3.5"
numpy = "^1.22.0"
tqdm = "^4.62.3"
ftfy = "^6.0.3"
lm-dataformat = "^0.0.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"