[tool.poetry]
name = "fordgron"
version = "0.1.0"
description = ""
authors = ["William Eliot <william@mystic.ai>", "Paul Hetherington <paul@getneuro.ai>"]
packages = [
  {include="fordgron"}
]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.2"
black = "^21.12b0"
transformers = "^4.15.0"
torchtext = "^0.11.1"
pandas = "^1.3.5"
numpy = "1.21.0"
tqdm = "^4.62.3"
ftfy = "^6.0.3"
lm-dataformat = "^0.0.20"
wandb = "^0.12.10"
pybind11 = "^2.9.1"
rich = "^12.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
poethepoet = "^0.12.3"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.10.2+cu113 torchvision==0.11.3+cu113 -f https://download.pytorch.org/whl/torch_stable.html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"