[tool.poetry]
name = "fordgron"
version = "0.1.1"
description = ""
authors = ["William Eliot <william@mystic.ai>", "Paul Hetherington <paul@getneuro.ai>"]
packages = [
  {include="fordgron"}
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.12.0%2Bcu113-cp39-cp39-linux_x86_64.whl", optional = true}
black = "^22.3.0"
transformers = "^4.15.0"
torchtext = "^0.11.1"
pandas = "^1.3.5"
numpy = "1.21.0"
tqdm = "^4.62.3"
ftfy = "^6.0.3"
lm-dataformat = "^0.0.20"
wandb = "^0.12.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
